fix: Change overlay look to invert the image behind it

--- a/static/style.css
+++ b/static/style.css
@@ -190,6 +190,6 @@ body {
 }
 
 .overlay {
-    background: rgba(255, 0, 0, 0.1);
+    backdrop-filter: invert(1);
     border: none !important;
 }
